Fixes spacing LTR and RTL | E1-355

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -1347,11 +1347,6 @@
         font-weight: normal;
         line-height: 1.5;
         padding-right: toRem(16);
-
-        @include rtlBlock() {
-          padding-left: toRem(16);
-          padding-right: 0;
-        }
       }
 
       ul {
